# load-balancer

./: Cargo.toml  README.md  app_config.toml
docker/: app_config.toml  docker-compose.yaml
docker/grafana/provisioning/dashboards/: load-balancer-dashboard.json  providers.yaml
docker/nginx/: config.conf
docker/prometheus/: prometheus.yaml  rules.yaml
src/: app_state.rs  balancer.rs  config.rs  healthcheck.rs  host.rs  main.rs  metrics.rs  policy.rs  result.rs  server.rs
src/policies/: dynamic_weighted_round_robin.rs  factory.rs  least_connections.rs  mod.rs  round_robin.rs  weighted_round_robin.rs  weighted_round_robin2.rs
src/policy/: dynamic_weighted_round_robin.rs  factory.rs  least_connections.rs  mod.rs  round_robin.rs  weighted_round_robin.rs
src/utils/: math.rs  mod.rs  serde_millis.rs  statistics.rs
